Contract Configurator 1.5.2
- Allow multiple parts to be specified in the PartValidation parameter.
- Fixed possible exception in VisitWaypoint (thanks AlphaAsh).
- Fixed bug in PartValidation where using FILTER would prevent the parameter from completing.

Contract Configurator 1.5.1
- Added new ChangeVesselOwnership contract behaviour.
- Added new NewVessel parameter.
- Added support for Tarsier Space Technology in science subsystem - ChemCam only (thanks GrafZahl).
- Added validation for CelestialBody name in WaypointGenerator (thanks Arctic Sesquipedalian).
- Additional performance fixes for CollectScience (Field Research).
- Fixed issue where activeUniqueValue and uniqueValue flags were not checked (thanks severedsolo).
- Fixed asteroid science subject from being offered unless asteroid tracking is unlocked.
- Fixed issue with "ghosting" vessels in SpawnVessel.
- Fixed parameters that weren't being hidden by the hideChildren attribute (thanks CosmoBro).
- Minor bug fixes.

Contract Configurator 1.5.0
- Added support for SpawnVessel in expressions.
- Added support for altitudeFactor, inclinationFactor, eccentricity and deviationWindow in OrbitGenerator.
- Change ordering of requirement check to improve contract pre-load performance.
- Improved logic so child REQUIREMENT nodes can hide PARAMETER nodes even when they fail validation (thanks CosmoBro).
- Fixed contracts that appear and disappear in mission control due to requirement issues (thanks dunadirect).
- Fixed issue with WaypointGenerator incorrectly requesting forceEquatorial attribute for RANDOM_WAYPOINT_NEAR (thanks AlphaAsh).
- Fixed an issue with stuttering in CollectScience (thanks _Zee and Yemo).
- Fixed issue with list expressions not expanding correctly on first parse (thanks CosmoBro).

Contract Configurator 1.4.2
- Fixed asteroid sample showing up in KSC contracts for Field Research (thanks maculator).
- Fixed mirrored heading/roll/pitch in SpawnVessel (thanks Xephan).