@@ -24,7 +24,7 @@ namespace ContractConfigurator.RemoteTech
             bool valid = base.Load(configNode);
 
             // Before loading, verify the RemoteTech version
-            valid &= Util.VerifyRemoteTechVersion();
+            valid &= Util.Version.VerifyRemoteTechVersion();
 
             // Do not check on active contracts
             checkOnActiveContract = configNode.HasValue("checkOnActiveContract") ? checkOnActiveContract : false;
@@ -46,7 +46,7 @@ namespace ContractConfigurator.RemoteTech
                 return maxCoverage == 0.0;
             }
 
-            double coverage = RemoteTechProgressTracker.Instance.GetCoverage(targetBody);
+            double coverage = RemoteTechProgressTracker.GetCoverage(targetBody);
             return coverage >= minCoverage && coverage <= maxCoverage;
         }
     }
